--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="menu">
 		<h2>Navigation</h2>
 		<ul>
-			<li><a href="Home.html">Home</li>
+			<li><a href="index.html">Home</li>
 			<li><a href="News.html">News</li>
 			<li><a href="Roster.html">Roster</li>
 			<li><a href="https://www.mlb.com/redsox/schedule">Schedule</li>
