--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
 	<link rel="stylesheet" href="style.css">
 	<div id="header">
 	<h1>Boston Red Sox Home Page</h1>
 	</div>
 	
-<head>
-
+</head>
 <body>
 	<div id="mainBody">
 		<div id="menu">
