--- a/Music.html
+++ b/Music.html
@@ -32,7 +32,7 @@
 <h2>Singing</h2>
 <h3>Time Spent Singing: 2 years</h3>
 <img src="https://th.bing.com/th/id/OIP.fRugvFgof1Xyi0Zlx8ruBwHaHX?w=205&h=204&c=7&r=0&o=5&dpr=1.3&pid=1.7", height="200", width="200">
-<a href="Contact.html"><h2>Contact Me About Lessons</h2></a>
+<a href="Contact.html"><h2>Click to Contact Me About Lessons</h2></a>
 </div>
 </body>
 </html>
