--- a/Speedrunning.html
+++ b/Speedrunning.html
@@ -29,7 +29,7 @@
 <h2>Celeste</h2>
 <h3>PB: 58 Minutes</h3>
 <img src="https://th.bing.com/th/id/OIP.vVvknNRz_bnXCAT73M7LtQHaEK?w=272&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7", height="200", width="300">
-<a href="Contact.html"><h2>Contact Me About Lessons</h2></a>
+<a href="Contact.html"><h2>Click to Contact Me About Lessons</h2></a>
 </div>
 </body>
 </html>
