--- a/Important Sites.html
+++ b/Important Sites.html
@@ -21,7 +21,7 @@
 <h1>Other Sites</h1>
 <p>Here are some other <i>related sites</i> to help you get started.</p>
 <ul>
-	<li><a href="youtube.com">YouTube</li></a>
+	<li><a href="https://www.youtube.com/">YouTube</li></a>
 	<li><a href="speedrun.com">Speedrun.com</li></a>
 	<li><a href="https://join-guitar.hellosimply.com/start/messagingIntroB?pid=bingsearch_int&af_click_lookback=7d&c=424284508&af_c_id=424284508&af_adset=1351301183422803&af_adset_id=1351301183422803&af_ad=84456650525188&af_ad_id=84456650525188&utm_source=bingsearch_int&utm_campaign=424284508&utm_medium=84456650525188&msclkid=be0279a920b1102224ef1dac22ec4db3">Simply Guitar</li></a>
 	<li><a href="https://join-piano.hellosimply.com/start/messagingIntroB?msclkid=29a925357ce31c738bcf41307e614810">Simply Piano</li></a>
